--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,3 +20,19 @@ body {
   color:grey;
   text-align: center;
 }
+
+._c {
+  text-align: center;
+
+}
+
+.iphone{
+  color:white;
+  font-size: 42px;
+  font-weight: 300;
+}
+
+footer {
+  text-align: right;
+  color:grey;
+}
